kubernetes/stackrox-secure/base/daemon-set.yaml
---
# Source: stackrox-secured-cluster-services/templates/collector.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  labels:
    app.kubernetes.io/component: collector
    app.kubernetes.io/instance: stackrox-secured-cluster-services
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: stackrox
    app.kubernetes.io/part-of: stackrox-secured-cluster-services
    app.kubernetes.io/version: 4.10.2
    helm.sh/chart: stackrox-secured-cluster-services-400.10.2
    service: collector
    app: collector
    auto-upgrade.stackrox.io/component: sensor
  annotations:
    email: support@stackrox.com
    meta.helm.sh/release-name: stackrox-secured-cluster-services
    meta.helm.sh/release-namespace: stackrox
    owner: stackrox
    checkov.io/skip1: CKV_K8S_8=Not Supported
    checkov.io/skip2: CKV_K8S_9=Not Supported
    checkov.io/skip3: CKV_K8S_16=Security Tool
    checkov.io/skip4: CKV_K8S_20=Security Tool
    checkov.io/skip5: CKV_K8S_22=Security Tool
    checkov.io/skip6: CKV_K8S_27=Security Tool
    checkov.io/skip7: CKV_K8S_23=Security Tool
    checkov.io/skip8: CKV_K8S_28=Security Tool
    checkov.io/skip9: CKV_K8S_29=Security Tool
    checkov.io/skip10: CKV_K8S_30=Security Tool
    checkov.io/skip11: CKV_K8S_31=Security Tool
    checkov.io/skip12: CKV_K8S_37=Security Tool
    checkov.io/skip13: CKV_K8S_38=Security Tool
    checkov.io/skip14: CKV_K8S_40=OpenShift Injects Random UID
  name: collector
  namespace: stackrox
spec:
  selector:
    matchLabels:
      service: collector
  template:
    metadata:
      namespace: stackrox
      labels:
        service: collector
        app: collector
        app.kubernetes.io/component: collector
        app.kubernetes.io/instance: stackrox-secured-cluster-services
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: stackrox
        app.kubernetes.io/part-of: stackrox-secured-cluster-services
        app.kubernetes.io/version: 4.10.2
        helm.sh/chart: stackrox-secured-cluster-services-400.10.2
      annotations:
        email: support@stackrox.com
        meta.helm.sh/release-name: stackrox-secured-cluster-services
        meta.helm.sh/release-namespace: stackrox
        openshift.io/required-scc: privileged
        owner: stackrox
    spec:
      tolerations:
        - operator: Exists
      serviceAccountName: collector
      automountServiceAccountToken: true
      containers:
        - name: collector
          image: quay.io/stackrox-io/collector:4.10.2@sha256:b40dcbbaabe19631c1b33a3b4fd980165b6ff4c00d6e4e2ea491bad41a680e7d
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              cpu: 50m
              memory: 512Mi
            requests:
              cpu: 25m
              memory: 256Mi
          resizePolicy:
            - resourceName: cpu
              restartPolicy: NotRequired
            - resourceName: memory
              restartPolicy: NotRequired
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - NET_RAW
            privileged: true
            readOnlyRootFilesystem: true
            runAsNonRoot: false
            seccompProfile:
              type: RuntimeDefault
          volumeMounts:
            - mountPath: /host/proc
              name: proc-ro
              readOnly: true
              mountPropagation: HostToContainer
            - mountPath: /host/etc
              name: etc-ro
              readOnly: true
              mountPropagation: HostToContainer
            - mountPath: /host/usr/lib
              name: usr-lib-ro
              readOnly: true
              mountPropagation: HostToContainer
            - mountPath: /host/sys
              name: sys-ro
              readOnly: true
              mountPropagation: HostToContainer
            - mountPath: /host/dev
              name: dev-ro
              readOnly: true
              mountPropagation: HostToContainer
            - mountPath: /run/secrets/stackrox.io/certs/
              name: certs
              readOnly: true
            - mountPath: /etc/stackrox
              name: collector-config
              readOnly: true
            - mountPath: /var/profiles
              name: collector-profiles
        - command:
            - stackrox/compliance
          image: quay.io/stackrox-io/main:4.10.2@sha256:8f483d29437b6425475e9dd1d032ac01579904b7103fc765c25e71ee58071ec8
          imagePullPolicy: IfNotPresent
          name: compliance
          resources:
            limits:
              cpu: "30m"
              memory: 256Mi
            requests:
              cpu: 10m
              memory: 128Mi
          resizePolicy:
            - resourceName: cpu
              restartPolicy: NotRequired
            - resourceName: memory
              restartPolicy: NotRequired
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            privileged: false
            readOnlyRootFilesystem: true
            runAsNonRoot: false
            runAsUser: 0
            seccompProfile:
              type: RuntimeDefault
            seLinuxOptions:
              type: container_runtime_t
          volumeMounts:
            - mountPath: /etc/ssl/
              name: etc-ssl
            - mountPath: /etc/pki/ca-trust/
              name: etc-pki-volume
            - mountPath: /host
              name: host-root-ro
              readOnly: true
              mountPropagation: HostToContainer
            - mountPath: /run/secrets/stackrox.io/certs/
              name: certs
              readOnly: true
            - mountPath: /hostindex/usr/share
              name: usr-share-ro
              readOnly: true
            - mountPath: /tmp
              name: index-volume
        - name: node-inventory
          image: quay.io/stackrox-io/scanner-slim:4.10.2@sha256:14621db68ebbd4304b0fe4bd5fe876cd1ee35d85a6cdfb9c27c383ac39c05889
          imagePullPolicy: IfNotPresent
          command:
            - /scanner
            - --nodeinventory
            - --config=
            - ""
          ports:
            - containerPort: 8444
              name: grpc
          resources:
            limits:
              cpu: "20m"
              memory: 144Mi
            requests:
              cpu: 10m
              memory: 72Mi
          resizePolicy:
            - resourceName: cpu
              restartPolicy: NotRequired
            - resourceName: memory
              restartPolicy: NotRequired
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            privileged: true
            readOnlyRootFilesystem: true
            runAsNonRoot: false
            seccompProfile:
              type: RuntimeDefault
          volumeMounts:
            - mountPath: /host
              name: host-root-ro
              readOnly: true
              mountPropagation: HostToContainer
            - mountPath: /tmp/
              name: tmp-volume
            - mountPath: /cache
              name: cache-volume
      volumes:
        - hostPath:
            path: /proc
          name: proc-ro
        - hostPath:
            path: /etc
          name: etc-ro
        - hostPath:
            path: /usr/lib
          name: usr-lib-ro
        - hostPath:
            path: /sys/
          name: sys-ro
        - hostPath:
            path: /dev
          name: dev-ro
        - name: certs
          secret:
            secretName: tls-cert-collector
        - hostPath:
            path: /
          name: host-root-ro
        - hostPath:
            path: /usr/share
          name: usr-share-ro
        - name: index-volume
          emptyDir: {}
        - name: etc-ssl
          emptyDir: {}
        - name: etc-pki-volume
          emptyDir: {}
        - name: tmp-volume
          emptyDir: {}
        - name: collector-profiles
          emptyDir: {}
        - name: cache-volume
          emptyDir:
            sizeLimit: 200Mi
        - name: collector-config
          configMap:
            name: collector-config
            optional: true
      dnsPolicy: ClusterFirst
      enableServiceLinks: false
      restartPolicy: Always
      schedulerName: default-scheduler
