kubernetes/stackrox-secure/base/deployment.yaml
---
# Source: stackrox-secured-cluster-services/templates/admission-controller.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admission-control
  namespace: stackrox
  labels:
    app.kubernetes.io/component: admission-control
    app.kubernetes.io/instance: stackrox-secured-cluster-services
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: stackrox
    app.kubernetes.io/part-of: stackrox-secured-cluster-services
    app.kubernetes.io/version: 4.10.2
    helm.sh/chart: stackrox-secured-cluster-services-400.10.2
    app: admission-control
    auto-upgrade.stackrox.io/component: sensor
  annotations:
    email: support@stackrox.com
    meta.helm.sh/release-name: stackrox-secured-cluster-services
    meta.helm.sh/release-namespace: stackrox
    owner: stackrox
    checkov.io/skip1: CKV_K8S_8=Not Supported
    checkov.io/skip2: CKV_K8S_20=Security Tool
    checkov.io/skip3: CKV_K8S_28=Security Tool
    checkov.io/skip4: CKV_K8S_29=Security Tool
    checkov.io/skip5: CKV_K8S_31=Security Tool
    checkov.io/skip6: CKV_K8S_37=Security Tool
    checkov.io/skip7: CKV_K8S_38=Security Tool
    checkov.io/skip8: CKV_K8S_40=OpenShift Injects Random UID
spec:
  replicas: 2
  minReadySeconds: 0
  selector:
    matchLabels:
      app: admission-control
  template:
    metadata:
      namespace: stackrox
      labels:
        app: admission-control
        app.kubernetes.io/component: admission-control
        app.kubernetes.io/instance: stackrox-secured-cluster-services
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: stackrox
        app.kubernetes.io/part-of: stackrox-secured-cluster-services
        app.kubernetes.io/version: 4.10.2
        helm.sh/chart: stackrox-secured-cluster-services-400.10.2
      annotations:
        email: support@stackrox.com
        meta.helm.sh/release-name: stackrox-secured-cluster-services
        meta.helm.sh/release-namespace: stackrox
        openshift.io/required-scc: restricted-v2
        owner: stackrox
        traffic.sidecar.istio.io/excludeInboundPorts: "8443"
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - preference:
                matchExpressions:
                  - key: node-role.kubernetes.io/control-plane
                    operator: Exists
              weight: 50
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app: admission-control
                topologyKey: kubernetes.io/hostname
              weight: 60
      serviceAccountName: admission-control
      automountServiceAccountToken: true
      dnsPolicy: ClusterFirst
      enableServiceLinks: false
      restartPolicy: Always
      schedulerName: default-scheduler
      containers:
        - image: quay.io/stackrox-io/main:4.10.2@sha256:8f483d29437b6425475e9dd1d032ac01579904b7103fc765c25e71ee58071ec8
          imagePullPolicy: IfNotPresent
          name: admission-control
          readinessProbe:
            httpGet:
              scheme: HTTPS
              path: /ready
              port: webhook
            initialDelaySeconds: 5
            periodSeconds: 5
            failureThreshold: 1
          ports:
            - containerPort: 8443
              name: webhook
          command:
            - admission-control
          resources:
            limits:
              cpu: 50m
              memory: 100Mi
            requests:
              cpu: 25m
              memory: 50Mi
          resizePolicy:
            - resourceName: cpu
              restartPolicy: NotRequired
            - resourceName: memory
              restartPolicy: NotRequired
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            privileged: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            seccompProfile:
              type: RuntimeDefault
          volumeMounts:
            - name: config
              mountPath: /run/config/stackrox.io/admission-control/config/
              readOnly: true
            - name: config-store
              mountPath: /var/lib/stackrox/admission-control/
            - name: ca
              mountPath: /run/secrets/stackrox.io/ca/
              readOnly: true
            - name: certs
              mountPath: /run/secrets/stackrox.io/certs/
              readOnly: true
            - name: ssl
              mountPath: /etc/ssl
            - name: pki
              mountPath: /etc/pki/ca-trust/
            - name: additional-cas
              mountPath: /usr/local/share/ca-certificates/
              readOnly: true
            - name: trusted-ca-volume
              mountPath: /etc/pki/injected-ca-trust/
              readOnly: true
      volumes:
        - name: certs
          secret:
            secretName: tls-cert-admission-control
        - name: ca
          secret:
            secretName: service-ca
            optional: true
        - name: config
          configMap:
            name: admission-control
            optional: true
        - name: config-store
          emptyDir: {}
        - name: ssl
          emptyDir: {}
        - name: pki
          emptyDir: {}
        - name: additional-cas
          secret:
            secretName: additional-ca-sensor
            optional: true
        - name: trusted-ca-volume
          configMap:
            name: injected-cabundle-stackrox-secured-cluster-services
            items:
              - key: ca-bundle.crt
                path: tls-ca-bundle.pem
            optional: true
---
# Source: stackrox-secured-cluster-services/templates/sensor.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sensor
  namespace: stackrox
  labels:
    app.kubernetes.io/component: sensor
    app.kubernetes.io/instance: stackrox-secured-cluster-services
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: stackrox
    app.kubernetes.io/part-of: stackrox-secured-cluster-services
    app.kubernetes.io/version: 4.10.2
    helm.sh/chart: stackrox-secured-cluster-services-400.10.2
    app: sensor
    auto-upgrade.stackrox.io/component: sensor
  annotations:
    email: support@stackrox.com
    meta.helm.sh/release-name: stackrox-secured-cluster-services
    meta.helm.sh/release-namespace: stackrox
    owner: stackrox
    checkov.io/skip1: CKV_K8S_8=Not Supported
    checkov.io/skip2: CKV_K8S_20=Security Tool
    checkov.io/skip3: CKV_K8S_28=Security Tool
    checkov.io/skip4: CKV_K8S_29=Security Tool
    checkov.io/skip5: CKV_K8S_31=Security Tool
    checkov.io/skip6: CKV_K8S_37=Security Tool
    checkov.io/skip7: CKV_K8S_38=Security Tool
    checkov.io/skip8: CKV_K8S_40=OpenShift Injects Random UID
spec:
  replicas: 1
  minReadySeconds: 15
  selector:
    matchLabels:
      app: sensor
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: sensor
        app.kubernetes.io/component: sensor
        app.kubernetes.io/instance: stackrox-secured-cluster-services
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: stackrox
        app.kubernetes.io/part-of: stackrox-secured-cluster-services
        app.kubernetes.io/version: 4.10.2
        helm.sh/chart: stackrox-secured-cluster-services-400.10.2
      annotations:
        traffic.sidecar.istio.io/excludeInboundPorts: 8443,9443
        email: support@stackrox.com
        meta.helm.sh/release-name: stackrox-secured-cluster-services
        meta.helm.sh/release-namespace: stackrox
        owner: stackrox
        openshift.io/required-scc: restricted-v2
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - preference:
                matchExpressions:
                  - key: cloud.google.com/gke-preemptible
                    operator: NotIn
                    values:
                      - "true"
              weight: 100
            - preference:
                matchExpressions:
                  - key: node-role.kubernetes.io/infra
                    operator: Exists
              weight: 50
            - preference:
                matchExpressions:
                  - key: node-role.kubernetes.io/compute
                    operator: Exists
              weight: 25
            - preference:
                matchExpressions:
                  - key: node-role.kubernetes.io/control-plane
                    operator: DoesNotExist
              weight: 100
      serviceAccountName: sensor
      automountServiceAccountToken: true
      dnsPolicy: ClusterFirst
      enableServiceLinks: false
      restartPolicy: Always
      schedulerName: default-scheduler
      # initContainers: null
      containers:
        - image: quay.io/stackrox-io/main:4.10.2@sha256:8f483d29437b6425475e9dd1d032ac01579904b7103fc765c25e71ee58071ec8
          imagePullPolicy: IfNotPresent
          name: sensor
          readinessProbe:
            httpGet:
              scheme: HTTPS
              path: /ready
              port: webhook
          ports:
            - containerPort: 8443
              name: api
            - containerPort: 9443
              name: webhook
            - containerPort: 9091
              name: monitoring-tls
            - containerPort: 9444
              name: proxy-https
          command:
            - kubernetes-sensor
          resources:
            limits:
              cpu: 250m
              memory: 2Gi
            requests:
              cpu: 50m
              memory: 512Mi
          resizePolicy:
            - resourceName: cpu
              restartPolicy: NotRequired
            - resourceName: memory
              restartPolicy: NotRequired
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            privileged: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            seccompProfile:
              type: RuntimeDefault
          volumeMounts:
            - name: varlog
              mountPath: /var/log/stackrox/
            - name: sensor-etc-ssl-volume
              mountPath: /etc/ssl/
            - name: sensor-etc-pki-volume
              mountPath: /etc/pki/ca-trust/
            - name: certs
              mountPath: /run/secrets/stackrox.io/certs/
            - name: certs-legacy
              mountPath: /run/secrets/stackrox.io/certs-legacy/
              readOnly: true
            - name: certs-new
              mountPath: /run/secrets/stackrox.io/certs-new/
              readOnly: true
            - name: additional-ca-volume
              mountPath: /usr/local/share/ca-certificates/
              readOnly: true
            - name: cache
              mountPath: /var/cache/stackrox
            - name: sensor-bound-sa-token
              mountPath: /var/run/secrets/openshift/serviceaccount
            - name: helm-cluster-config
              mountPath: /run/secrets/stackrox.io/helm-cluster-config/
              readOnly: true
            - name: helm-effective-cluster-name
              mountPath: /run/secrets/stackrox.io/helm-effective-cluster-name/
              readOnly: true
            - name: trusted-ca-volume
              mountPath: /etc/pki/injected-ca-trust/
              readOnly: true
            - name: monitoring-tls
              mountPath: /run/secrets/stackrox.io/monitoring-tls
              readOnly: true
            - name: proxy-tls-volume
              mountPath: /run/secrets/stackrox.io/proxy-tls/
              readOnly: true
      volumes:
        - name: certs
          emptyDir: {}
        - name: certs-legacy
          secret:
            secretName: sensor-tls
            optional: true
            items:
              - key: sensor-cert.pem
                path: cert.pem
              - key: sensor-key.pem
                path: key.pem
              - key: ca.pem
                path: ca.pem
        - name: certs-new
          secret:
            secretName: tls-cert-sensor
            optional: true
        - name: sensor-etc-ssl-volume
          emptyDir: {}
        - name: sensor-etc-pki-volume
          emptyDir: {}
        - name: additional-ca-volume
          secret:
            secretName: additional-ca-sensor
            optional: true
        - name: varlog
          emptyDir: {}
        - name: cache
          emptyDir: {}
        - name: sensor-bound-sa-token
          projected:
            defaultMode: 420
            sources:
              - serviceAccountToken:
                  path: token
                  audience: openshift
                  expirationSeconds: 3600
        - name: helm-cluster-config
          secret:
            secretName: helm-cluster-config
            optional: true
        - name: helm-effective-cluster-name
          secret:
            secretName: helm-effective-cluster-name
            optional: true
        - name: trusted-ca-volume
          configMap:
            name: injected-cabundle-stackrox-secured-cluster-services
            items:
              - key: ca-bundle.crt
                path: tls-ca-bundle.pem
            optional: true
        - name: monitoring-tls
          secret:
            secretName: sensor-monitoring-tls
        - name: proxy-tls-volume
          secret:
            secretName: sensor-proxy-tls
