kubernetes/stackrox-secure/base/service.yaml
---
# Source: stackrox-secured-cluster-services/templates/admission-controller.yaml
apiVersion: v1
kind: Service
metadata:
  name: admission-control
  namespace: stackrox
  labels:
    app.kubernetes.io/component: admission-control
    app.kubernetes.io/instance: stackrox-secured-cluster-services
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: stackrox
    app.kubernetes.io/part-of: stackrox-secured-cluster-services
    app.kubernetes.io/version: 4.10.2
    helm.sh/chart: stackrox-secured-cluster-services-400.10.2
    auto-upgrade.stackrox.io/component: sensor
  annotations:
    email: support@stackrox.com
    meta.helm.sh/release-name: stackrox-secured-cluster-services
    meta.helm.sh/release-namespace: stackrox
    owner: stackrox
spec:
  ports:
    - name: https
      port: 443
      targetPort: webhook
      protocol: TCP
  selector:
    app: admission-control
  type: ClusterIP
  sessionAffinity: None
---
# Source: stackrox-secured-cluster-services/templates/sensor.yaml
apiVersion: v1
kind: Service
metadata:
  name: sensor
  namespace: stackrox
  labels:
    app.kubernetes.io/component: sensor
    app.kubernetes.io/instance: stackrox-secured-cluster-services
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: stackrox
    app.kubernetes.io/part-of: stackrox-secured-cluster-services
    app.kubernetes.io/version: 4.10.2
    helm.sh/chart: stackrox-secured-cluster-services-400.10.2
    auto-upgrade.stackrox.io/component: sensor
  annotations:
    email: support@stackrox.com
    meta.helm.sh/release-name: stackrox-secured-cluster-services
    meta.helm.sh/release-namespace: stackrox
    owner: stackrox
    service.beta.openshift.io/serving-cert-secret-name: sensor-monitoring-tls
spec:
  ports:
    - name: https
      port: 443
      targetPort: api
      protocol: TCP
    - name: monitoring-tls
      port: 9091
      targetPort: monitoring-tls
      protocol: TCP
  selector:
    app: sensor
  type: ClusterIP
  sessionAffinity: None
---
# Source: stackrox-secured-cluster-services/templates/sensor.yaml
apiVersion: v1
kind: Service
metadata:
  name: sensor-proxy
  namespace: stackrox
  labels:
    app.kubernetes.io/component: sensor
    app.kubernetes.io/instance: stackrox-secured-cluster-services
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: stackrox
    app.kubernetes.io/part-of: stackrox-secured-cluster-services
    app.kubernetes.io/version: 4.10.2
    helm.sh/chart: stackrox-secured-cluster-services-400.10.2
  annotations:
    email: support@stackrox.com
    meta.helm.sh/release-name: stackrox-secured-cluster-services
    meta.helm.sh/release-namespace: stackrox
    owner: stackrox
    service.beta.openshift.io/serving-cert-secret-name: sensor-proxy-tls
spec:
  ports:
    - name: https
      port: 443
      targetPort: proxy-https
      protocol: TCP
  selector:
    app: sensor
  type: ClusterIP
---
# Source: stackrox-secured-cluster-services/templates/sensor.yaml
apiVersion: v1
kind: Service
metadata:
  name: sensor-webhook
  namespace: stackrox
  labels:
    app.kubernetes.io/component: sensor
    app.kubernetes.io/instance: stackrox-secured-cluster-services
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: stackrox
    app.kubernetes.io/part-of: stackrox-secured-cluster-services
    app.kubernetes.io/version: 4.10.2
    helm.sh/chart: stackrox-secured-cluster-services-400.10.2
    auto-upgrade.stackrox.io/component: sensor
  annotations:
    email: support@stackrox.com
    meta.helm.sh/release-name: stackrox-secured-cluster-services
    meta.helm.sh/release-namespace: stackrox
    owner: stackrox
spec:
  ports:
    - name: https
      port: 443
      targetPort: webhook
      protocol: TCP
  selector:
    app: sensor
  type: ClusterIP
  sessionAffinity: None
