kubernetes/stackrox-secure/base/webhook.yaml
---
# Source: stackrox-secured-cluster-services/templates/admission-controller.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: stackrox
  labels:
    app.kubernetes.io/component: admission-control
    app.kubernetes.io/instance: stackrox-secured-cluster-services
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: stackrox
    app.kubernetes.io/part-of: stackrox-secured-cluster-services
    app.kubernetes.io/version: 4.10.2
    helm.sh/chart: stackrox-secured-cluster-services-400.10.2
    auto-upgrade.stackrox.io/component: sensor
  annotations:
    email: support@stackrox.com
    meta.helm.sh/release-name: stackrox-secured-cluster-services
    meta.helm.sh/release-namespace: stackrox
    owner: stackrox
webhooks:
  - name: policyeval.stackrox.io
    sideEffects: NoneOnDryRun
    admissionReviewVersions:
      - v1
      - v1beta1
    timeoutSeconds: 12
    rules:
      - apiGroups:
          - "*"
        apiVersions:
          - "*"
        operations:
          - CREATE
          - UPDATE
        resources:
          - pods
          - deployments
          - deployments/scale
          - replicasets
          - replicationcontrollers
          - statefulsets
          - daemonsets
          - cronjobs
          - jobs
          - deploymentconfigs
    namespaceSelector:
      matchExpressions:
        - key: namespace.metadata.stackrox.io/name
          operator: NotIn
          values:
            - stackrox
            - kube-system
            - kube-public
            - istio-system
    failurePolicy: Ignore
    clientConfig:
      caBundle: <path:secret/data/homelab/stackrox/common#ca-pem | base64encode>

      service:
        namespace: stackrox
        name: admission-control
        path: /validate
  - name: k8sevents.stackrox.io
    sideEffects: NoneOnDryRun
    admissionReviewVersions:
      - v1
      - v1beta1
    timeoutSeconds: 12
    rules:
      - apiGroups:
          - "*"
        apiVersions:
          - "*"
        operations:
          - CONNECT
        resources:
          - pods
          - pods/exec
          - pods/portforward
    failurePolicy: Ignore
    clientConfig:
      caBundle: <path:secret/data/homelab/stackrox/common#ca-pem | base64encode>
      service:
        namespace: stackrox
        name: admission-control
        path: /events
